--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,9 @@
         </div>
       </div>
     </nav>
-    <%= yield %>
+    <div style="padding-top:100px">
+      <%= yield %>
+    </div>
     <footer class="footer text-center">
       <div class="container">
         <div class="row">
