--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,6 @@
  *= require_tree .
  *= require_self
  */
+#signin-form {margin: 0px 0px 25px 0px}
+#signin-form input[type=email],#signin-form input[type=password]{width: 100%}
+
